make integration test java 8 compliant